Some introduction updates

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -458,7 +458,7 @@ cannot be performed in this representation.\todo{cite autoconj etc.}
 
 sldk sldks dlks dlksfj dlkfjs lkdjf slkdjls dkf
 
-\textcite{singer2018introduction}
+\textcite{singer2018static}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
